--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
             <h1 class="logo">Freelancer<span class="sup">®</span></h1>
           </div>
           <nav class="menu">
+            <button class="burger_button">
+              <span class="burger_button-label">Закрыть окно</span>
+            </button>
             <ul class="menu-list">
               <li class="menu-list-item">
                 <a class="menu-link" href="#0">About</a>
