--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" href="CSS/style.css" />
     <title>Freelancer</title>
   </head>
   <body>
@@ -52,15 +52,19 @@
         </div>
       </div>
       <div class="header-titles">
-        <h2 class="header-title">
-          Intelligence <br />
-          is nothing without ambition<span class="dot">.</span>
-        </h2>
-        <h3 class="header-title-little">
-          We're small but impressive creative agency
-        </h3>
-        <div class="read-more">
-          <button class="submit">Read more</button>
+        <div class="header-title-container">
+          <div class="title-container">
+            <h2 class="header-title">
+              Intelligence <br />
+              is nothing without ambition<span class="dot">.</span>
+            </h2>
+            <h3 class="header-title-little">
+              We're small but impressive creative agency
+            </h3>
+          </div>
+          <div class="read-more">
+            <button class="submit">Read more</button>
+          </div>
         </div>
       </div>
     </header>
