--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="CSS/style.css" />
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
+    <script type="text/javascript" src="script.js"></script>
     <title>Freelancer</title>
   </head>
   <body>
@@ -36,8 +38,7 @@
                   href="https://twitter.com"
                   class="socials-link socials-link-twitter"
                 >
-                  <svg
-                    lass="socials-link-text"
+                  <svg class="social"
                     viewBox="0 -47 512.00203 512"
                     xmlns="http://www.w3.org/2000/svg"
                   >
@@ -52,7 +53,7 @@
                   href="https://facebook.com"
                   class="socials-link socials-link-facebook"
                 >
-<svg class="socials-link-facebook" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+<svg class="social" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	 width="96.124px" height="96.123px" viewBox="0 0 96.124 96.123" style="enable-background:new 0 0 96.124 96.123;"
 	 xml:space="preserve">
 <g>
@@ -62,6 +63,23 @@
 		c0-4.444,1.059-6.7,6.848-6.7l8.397-0.003c1.082,0,1.959-0.878,1.959-1.96V1.98C74.046,0.899,73.17,0.022,72.089,0.02z"/>
 </svg>
                 </a>
+              </li>
+              <li class="menu-list-item">
+                	<label class="switch-holder">
+		<input
+			class="input"
+			type="checkbox"
+			:checked="checked"
+			@change="toggleSwitch"
+		/>
+		<span class="switch"></span>
+		<span
+			v-if="checked"
+			class="label"></span>
+		<span
+			v-else
+			class="label"></span>
+	</label>
               </li>
             </ul>
           </nav>
@@ -155,7 +173,14 @@
           </div>
           <h5 class="portfolio-titles-link">
             <a class="portfolio-title-link" href="#0"
-              >More<span class="s"></span
+              >More<span class="s">
+                <svg class="pointer" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+	 viewBox="0 0 31.49 31.49" style="enable-background:new 0 0 31.49 31.49;" xml:space="preserve">
+<path style="fill:#fa5c65;" d="M21.205,5.007c-0.429-0.444-1.143-0.444-1.587,0c-0.429,0.429-0.429,1.143,0,1.571l8.047,8.047H1.111
+	C0.492,14.626,0,15.118,0,15.737c0,0.619,0.492,1.127,1.111,1.127h26.554l-8.047,8.032c-0.429,0.444-0.429,1.159,0,1.587
+	c0.444,0.444,1.159,0.444,1.587,0l9.952-9.952c0.444-0.429,0.444-1.143,0-1.571L21.205,5.007z"/>
+</svg>
+</span
             ></a>
           </h5>
         </section>
@@ -237,5 +262,6 @@
         <h6 class="copyr">Freelancer - Designed by Wojtek Kwiatkowski</h6>
       </div>
     </footer>
+    <script src="JS/script.js"></script>
   </body>
 </html>
